<resources>
    <string name="app_name">Suggest_places</string>
    <string name="Suggest_places">إقترح أماكن</string>
    <string name="next">التالي</string>
    <string name="previous">السابق</string>

    <string name="bangkok_title">بانكوك (تايلاند)</string>
    <string name="london_title">لندن (إنجلترا)</string>
    <string name="paris_title">باريس (فرنسا)</string>
    <string name="dubai_title">دبي (الإمارات)</string>
    <string name="new_york_title">نيويورك (الولايات المتحدة الأمريكية)</string>
    <string name="istanbul_title">اسطنبول (تركيا) </string>
    <string name="seoul_title">سيول (كوريا الجنوبية)</string>
    <string name="hong_kong_title">هونج كونج (الصين)</string>
    <string name="milan_title">ميلان (إيطاليا)</string>
    <string name="barcelona_title">برشلونة (إسبانيا)</string>


    <string name="bangkok_description">بانكوك عاصمة تايلاند ومينائها الرئيسي، وواحدة من أشهر مدن تايلاند ومن أجمل المدن السياحية في العالم ككل، حتى أنها كثيراً ما تُلقّب “أفضل وجهة سياحية في العالم” لما توفره من مقومات ومُتع سياحية ترفيهية مثل الأسواق الشعبية ومراكز التسوق الراقية، والفنادق عالية المستوى التي توفر خيارات إقامة تلاءم مُختلف الميزانيات، كما تتمتع العاصمة بانكوك بعدد من ناطحات السحاب العصرية العملاقة، جنباً إلى جنب مع المعابد التاريخية والقصور الملكية ذات التاريخ الأثري.</string>
    <string name="london_description">لندن عاصمة بريطانيا، ومركزها السياسي والثقافي والاقتصادي، ومن أهم مدن السياحة في إنجلترا، تقع جنوب البلاد على ضفاف نهر التيميز، وتشتهر بـ “مدينة الضباب” نظراً لكثرة تكوّن الضباب فيها، تتميّز لندن بتنوع مُناخها من منطقة لأخرى طيلة العام، وبشبكة ضخمة مُتطورة من النقل والمواصلات تربط أهم مدنها، بالإضافة إلى تنوع ثقافي شديد يرجع لكثرة الفئات العرقية التي تسكنها، مع عدد من أروع وأشهر المعالم التي جعلتها واحدة من أجمل مدن العالم وأكثرها شعبية سياحية، ولعل من أشهر معالم لندن: برج لندن التاريخي الذي يحوي ساعة بيج بن الشهيرة، قصر باكنجهام الملكي وحدائقه.</string>
    <string name="paris_description">باريس العاصمة الفرنسية، أكبر وأجمل مدن السياحة في فرنسا ومركزها السياسي والاقتصادي والثقافي. تقع باريس شمال البلاد على مقربة من القناة الإنجليزية، ويُقسّمها نهر السين إلى جُزأين، وقوامهما 20 حي، تم تأسيس المدينة خلال القرن 19 على يد المعماري الفرنسي هوسمان، لتضم مجموعة من أشهر وأهم وأعرق المعالم التاريخية في العالم، والتي جعلت منها أجمل مدن العالم السياحية التي يأتيها السياح من كل حدبٍ وصوب ولا تنقطع عنها الزيارات طيلة العام، ولعل من أهم ما يُميّز باريس من معالم: برج ايفل، كاتدرائية نوتردام، ساحة الباستيل، متحف اللوفر، وغيرها الكثير.</string>
    <string name="dubai_description">دبي ثاني أكبر المدن الإماراتية المُطلة على الخليج العربي مساحة وأكبرها سكاناً، وواحدة من أجمل مدن العالم وأكثرها جذباً للسياح، لما تتمتع به من مظهر غربي أنيق بروح عربية شرقية أصيلة، فمنذ سنوات تسعى دبي لصُنع نهضة هندسية ومعمارية لا مثيل لها عالمياً، ببناء كل ما هو غريب ومُدهش لافت للأنظار، بدايةً من برج خليفة أعلى ناطحة سحاب بالعالم، ثم برج العرب، ثم أكبر جزيرة نخيل اصطناعية ترفيهية بالعالم، وبرغم كل هذا الصخب، توفر دبي أجواء هادئة للاستجمام والاسترخاء، من خلال صحاريها وشواطئها الرائعة التي تُعد بقعة مثالية لجولات السفاري والتخييم.</string>
    <string name="new_york_description">تقع نيويورك ثاني أفضل مدن الولايات المتحدة الأمريكية على 3 جزر شمال شرق البلاد بين العاصمة واشنطن وبوسطن، وتتمتع بعدد لا حصر له من المعالم السياحية الأشهر في العالم، والتي يقع أغلبها على مسافات بسيطة يُمكن قطعها بسهولة بالسيارة، ما يجعلها أسهل وسيلة للمرور وإلقاء نظرة سريعة على معالم المدينة الرئيسية، تشتهر نيويورك بساحات التسوق والمطاعم الراقية ذات الشهرة العالمية حول أهم الأماكن السياحية مثل تمثال الحرية، جسر بروكلين، مبنى إمباير ستيت، منتزه سنترال بارك، أحيائها ومتاحفها التاريخية، مرصد ون وورلد للحصول على نظرة بانوراميه ساحرة ولا مثيل لها على المدينة.</string>
    <string name="istanbul_description">تعتبر اسطنبول أكبر المدن السياحية في تركيا، وثاني أكبر مدن تركيا من حيث الكثافة السكانية والخامسة عالمياً، وفي الوقت ذاته هي واحدة من أفضل المدن السياحية بالعالم، لما تتمتع به من تاريخ عريق وتنوع ثقافي وحضاري عظيم بفضل ما تواتر عليها من حضارات إنسانية، ولكونها بمثابة البرزخ الذي يربط قارتين مُختلفتين ثقافياً وحضارياً، تُشكّل اسطنبول نقطة الوصل بين آسيا وأوروبا عبر مضيق البوسفور الذي يربط البحر الأسود ببحر مرمرة، ويُشكّل إحدى أهم وأشهر معالمها السياحية، جنباً إلى جنب مع مساجدها وقصورها وأضرحتها العثمانية وأطلال قلاعها وكنائسها البيزنطية.</string>
    <string name="seoul_description">سيول عاصمة كوريا الجنوبية ومدينة التناقضات بالنسبة للآسيويين، بينما تُصنّف كواحدة من أفضل مدن العالم سياحياً وصناعياً، بفضل تقدُّمها التقني وشهرتها في مجال صناعة وتسويق الأزياء، على نحوٍ آخر تتمتع سيول بتاريخ وتراث عريق، تاركاً بصمته على معابدها وقصورها، وحتى منازلها الخشبية التقليدية ذات الهندسة المعمارية الأنيقة والراقية، هذا إلى جانب مُنتزهاتها وحدائقها الغنّاء ومسارات جبالها وضفاف أنهارها التي تكتسب شعبية واسعة بين سكانها وزوارها من السياح الأجانب، كوجهات مثالية للتريُّض والتنزه وركوب الدراجات.</string>
    <string name="hong_kong_description">صنّف هونج كونج كواحدة من أجمل مدن الصين، وأيضاً من أجمل مدن العالم السياحية وأكثرها ازدحاماً وتكدُّساً بالسكان، حيث تنعم المنطقة المُستقلة ذاتية الحكم رغم تبعيتها جغرافياً للصين بميناء هو الأهم آسيوياً لدوره في حركة التجارة الدولية في القارة، إلى جانب كونه أحد أهم وأشهر معالم المدينة السياحية، هذا بالإضافة إلى شهرة المدينة في مجالات صناعة الموضة والأزياء، وصناعة الأفلام حيث تضم متاجر وبوتيكات تخص أشهر الماركات والعلامات التجارية العالمية، جغرافياً تُعامل هونج كونج كأرخبيل من الجزر يقع بين بحر الصين الجنوبي ونهر اللؤلؤة تُحيطه نحو 200 جزيرة.</string>
    <string name="milan_description">ميلانو أو ميلان ثاني أكبر مدن إيطاليا سكاناً ومن أفضل مدن السياحة في إيطاليا ككل، وواحدة من أفضل وجهاتها السياحية، بل ويُمكن اعتبارها أجمل مدينة في العالم لأولئك الذين يهوون مواكبة أحدث صيحات الموضة العالمية؛ حيث يُمكنك خلالها العثور على أكبر بوتيكات الأزياء وأشهر علاماتها التجارية: في بريرا، فيا مونت نابليون، جاليري فيتوريو إيمانويل الثاني، وغيرها، وبالإضافة إلى ذلك تحتضن ميلانو مجموعة من أجمل معالم جذب السياحة في إيطاليا والعالم، بفضل ما يُميّز مبانيها من فن وهندسة معمارية بديعة كما هو الحال في كاتدرائية دومو، لاسكالا، دار الأوبرا حيث يُمكنك أيضاً حضور عرض فني راقي.</string>
    <string name="barcelona_description">تُعد برشلونة إحدى أفضل مدن سياحية بالعالم، بفضل موقعها الجغرافي المُتميّز بين الساحل الشمالي الشرقي للبحر المتوسط بإسبانيا، وبين جنوب جبال البرانس الفرنسية، وإلى جانب شواطئها الساحرة المُمتدة، ومناخها اللطيف على مدار العام ما يجعلها عطلة مصيفية رائعة للسياح من مُختلف بقاع العالم، تضم برشلونة الإسبانية نادي كُروي عريق وشهير يستقطب مُشجعيه من كل مكان لمُتابعة مُبارياته الحية، وهذا بالإضافة إلى عدد من المعارض والمتاحف الفنية ذات التراث الثقافي العريق الذي ميّز المدينة عبر عقود، لكونها من أهم مدن السياحة في إسبانيا والتي شهدت ميلاد ونشأة أشهر الفنانين التشكيليين أمثال بيكاسو وميرو.</string>


</resources>