<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bangkok_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/bangkok_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="32sp"
        android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/bangkok_01"
            android:id="@+id/bangkok_01"/>

    <TextView
        android:id="@+id/bangkok_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/bangkok_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left|bottom"
            android:backgroundTint="@color/design_default_color_primary"
            android:padding="8dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="setPrevious"/>

        <Button
            android:text="@string/Suggest_places"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:layout_gravity="center|bottom"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="display"/>

        <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right|bottom"
            android:backgroundTint="@color/design_default_color_primary"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:onClick="setNext"/>

    </LinearLayout>

</LinearLayout>